--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,7 +6,7 @@
             <mat-icon *ngIf= "!sidenav.opened">menu</mat-icon>
             <mat-icon *ngIf= "sidenav.opened">close</mat-icon>
         </button>
-        <h1 class="example-app-name"MEDIAPP></h1>
+        <h1 class="example-app-name">MEDIAPP</h1>
         <span class="example-spacer"></span>
         
         <button mat-icon-button [matMenuTriggerFor]="menu">
@@ -71,7 +71,7 @@
 
         <mat-sidenav-content>
             <router-outlet></router-outlet>
-         </mat-sidenav-content>
+        </mat-sidenav-content>
     </mat-sidenav-container>
     <!--SIDE NAV FIN-->
 
