--- a/src/app/pages/medico/medico.component.html
+++ b/src/app/pages/medico/medico.component.html
@@ -1,8 +1,52 @@
 <mat-toolbar>
   <mat-toolbar-row>
     <span>Medicos</span>
-  </mat-toolbar-row>
+  </mat-toolbar-row>  
 </mat-toolbar>
-<p>
-  medico works!
-</p>
+
+<router-outlet></router-outlet>
+
+<div class="example-header">
+  <mat-form-field>
+    <input matInput (keyup)="applyFilter($event.target.value)" placeholder="Filtro">
+  </mat-form-field>
+</div>
+
+<div class="mat-table">
+<table mat-table class="mat-elevation-z8" #table [dataSource]="dataSource" matSort>
+  <ng-container matColumnDef="idMedico">
+    <th mat-header-cell *matHeaderCellDef mat-sort-header> ID </th>
+    <td mat-cell *matCellDef="let row"> {{row.idMedico}} </td>
+  </ng-container>
+
+  <ng-container matColumnDef="nombres">
+    <th mat-header-cell *matHeaderCellDef mat-sort-header> NOMBRES </th>
+    <td mat-cell *matCellDef="let row"> {{row.nombres}} </td>
+  </ng-container>
+
+  <ng-container matColumnDef="apellidos">
+    <th mat-header-cell *matHeaderCellDef mat-sort-header> APELLIDOS </th>
+    <td mat-cell *matCellDef="let row"> {{row.apellidos}} </td>
+  </ng-container>
+
+  <ng-container matColumnDef="cmp">
+    <th mat-header-cell *matHeaderCellDef mat-sort-header> CMP </th>
+    <td mat-cell *matCellDef="let row"> {{row.cmp}} </td>
+  </ng-container>
+
+  <ng-container matColumnDef="acciones">
+    <th mat-header-cell *matHeaderCellDef> ACCIONES </th>
+    <td mat-cell *matCellDef="let row"> 
+      <button mat-button color = "primary" (click) = "openDialog(row)">Actualizar</button>
+      <button mat-button color = "accent" (click) = "eliminar(row.idMedico)">Eliminar</button>
+    </td>
+  </ng-container>
+
+  <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+      <tr mat-row *matRowDef="let element; columns: displayedColumns;"></tr>
+</table>
+<mat-paginator [pageSizeOptions]="[5, 10, 25, 100]" showFirstLastButtons></mat-paginator>
+</div>
+<button mat-fab color="accent" style="float: right" (click) = "openDialog()">
+    <mat-icon>create</mat-icon>
+</button>
