--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,32 +1,40 @@
-
 <!--SIDE NAV INICIO-->
 <div class="example-container">
-    <mat-toolbar color = "primary" class="example-toolbar">
-        <button mat-icon-button (click) = sidenav.toggle()>
-            <mat-icon *ngIf= "!sidenav.opened">menu</mat-icon>
-            <mat-icon *ngIf= "sidenav.opened">close</mat-icon>
+    <mat-toolbar color="primary" class="example-toolbar" *ngIf="loginService.estaLogeado()">
+        <button mat-icon-button (click)=sidenav.toggle()>
+            <mat-icon *ngIf="!sidenav.opened">menu</mat-icon>
+            <mat-icon *ngIf="sidenav.opened">close</mat-icon>
         </button>
         <h1 class="example-app-name">MEDIAPP</h1>
         <span class="example-spacer"></span>
-        
+
         <button mat-icon-button [matMenuTriggerFor]="menu">
-                <mat-icon>more_vert</mat-icon>
+            <mat-icon>more_vert</mat-icon>
         </button>
-            <mat-menu #menu="matMenu">
-                <button mat-menu-item routerLink = "/perfil">
-                    <mat-icon>account_box</mat-icon>
-                    <span>Mi perfil</span>
-                </button>
-                <button mat-menu-item disabled (click) = "sidenav.opened = false">
-                    <mat-icon>exit_to_app</mat-icon>
-                    <span>Cerrar sesión</span>
-                    </button>
-            </mat-menu>
+        <mat-menu #menu="matMenu">
+            <button mat-menu-item routerLink="/perfil">
+                <mat-icon>account_box</mat-icon>
+                <span>Mi perfil</span>
+            </button>
+            <button mat-menu-item (click)="sidenav.opened = false" (click)="loginService.cerrarSesion()">
+                <mat-icon>exit_to_app</mat-icon>
+                <span>Cerrar sesión</span>
+            </button>
+        </mat-menu>
     </mat-toolbar>
 
     <mat-sidenav-container class="example-sidenav-container">
         <mat-sidenav #sidenav style="width: 200px">
-        <img src="assets/ic_listempty.png" width= "120" style="margin-left: 20px">
+            <img src="assets/ic_listempty.png" width="120" style="margin-left: 20px">
+            <div *ngFor="let m of menus">
+                <button mat-menu-item routerLink="{{m.url}}" style="cursor: pointer" (click)="sidenav.toggle()">
+                    <mat-icon>{{m.icono}}</mat-icon>
+                    <span>{{m.nombre}}</span>
+                </button>
+                <mat-divider></mat-divider>
+            </div>
+
+            <!--
         <button mat-menu-item routerLink = "/buscar" style = "cursor: pointer" (click) = "sidenav.toggle()">
             <mat-icon>search</mat-icon>
             <span>buscar</span>
@@ -66,7 +74,7 @@
             <mat-icon>assessment</mat-icon>
             <span>Reportes</span>
         </button>
-        
+    -->
         </mat-sidenav>
 
         <mat-sidenav-content>
